fixed some responsive layout bugs

--- a/style.css
+++ b/style.css
@@ -93,6 +93,20 @@ body {
     }
 
     @media (min-width:768px) and (max-width:992px){
+        .footer-text{
+            display: flex;
+            flex-direction: column;
+        }
+    }
+
+    @media  (max-width:2000px){
+        .of{
+            overflow: auto;
+        }
+
+    }
+
+    @media (min-width:768px) and (max-width:992px){
         .tro{
             font-size: 30px;
         }
